# Path_Tracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bug1.json
cmake/: embed_msl.cmake
docs/: PARITY.md
src/: bvh.cpp  bvh.h  camera.h  camera_controller.h  gltf_loader.cpp  gltf_loader.h  gpu_renderer.h  gpu_renderer.mm  hittable.h  image.cpp  image.h  integrator.h  kernel_types.h  main.cpp  material.h  mesh.h  mesh_gen.h  ray.h  renderer.cpp  renderer.h  rng.h  scene.h  scene_io.cpp  scene_io.h  scene_setup.h  settings.h  spectral.h  sphere.h  texture.h  vec3.h  viewer.h  viewer_macos.mm
src/kernels/: pathtrace.metal
